# LearnToDraw

./: .gitignore  AGENTS.md  Makefile  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
apps/api/: pyproject.toml  setup.py
apps/api/scripts/: replay_normalization_experiment.py
apps/api/src/learn_to_draw_api/: __init__.py  api.py  config.py  errors.py  main.py  models.py  routes.py
apps/api/src/learn_to_draw_api/adapters/: __init__.py  axidraw_client.py  axidraw_models.py  axidraw_plotter.py  camera.py  camerabridge_camera.py  camerabridge_client.py  factory.py  mock_camera.py  mock_plotter.py  opencv_camera.py  plotter.py  unavailable_plotter.py
apps/api/src/learn_to_draw_api/services/: camera_device_settings.py  capture_normalization.py  capture_review_memory.py  capture_service.py  captures.py  hardware.py  plot_workflow.py  plot_workflow_assets.py  plot_workflow_execution.py  plot_workflow_preparation.py  plot_workflow_runs.py  plotter_calibration.py  plotter_device_settings.py  plotter_workspace.py
apps/api/src/learn_to_draw_api/services/capture_normalization/: __init__.py  contour_detector.py  geometry.py  line_detector.py  region_detector.py  rendering.py  service.py  types.py
apps/api/tests/: conftest.py  test_api.py  test_axidraw_adapter.py  test_camera_adapter.py  test_capture_normalization.py  test_plot_workflow_preparation.py  test_plot_workflow_service.py  test_plotter_calibration.py  test_services.py
docs/: agent-workflow.md  analysis-roadmap.md  architecture.md  history.md  vision.md  workflow.md
(+58 files in other folders)
